# boundstates

./: .gitignore  CMakeLists.txt  README.md
include/: basis.hpp  boundstates-app.hpp  complex_thomas.hpp  domcke-model.hpp  lcp-app.hpp  output.hpp  schrodinger-box.hpp  typedefs.hpp
src/: boundstates-app.cpp  complex_thomas.cpp  domcke.cpp  dvr.cpp  lcp-app.cpp  lcp.cpp  main.cpp  plot.gpi  schrodinger-box.cpp
src/gui/: lcp-gui.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
